--- a/server/.env
+++ b/server/.env
@@ -5,8 +5,8 @@ CLIENT_URL=http://localhost:3000
 
 # Database
 # MONGO_URI=mongodb://localhost:27017/project0
-MONGO_URI=mongodb://127.0.0.1:27017/project0
-
+# MONGO_URI=mongodb://127.0.0.1:27017/project0
+MONGO_URI= mongodb+srv://Luqman:<Khan6224>@cluster0.b1mg6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # JWT
 JWT_SECRET=9Ymy6Y5GJ5fLVUR+adsXPqjpMQoIPuGvcQeZMxeniNo=
 
